k8s/ingress.yaml
# Ingress -- uniquement si un ingress controller est installe dans le cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-api-ingress
  namespace: devops-training
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: quotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quotes-api-svc
                port:
                  number: 80
